--- a/contact-me.html
+++ b/contact-me.html
@@ -3,7 +3,7 @@
  <head>
     <meta charset="UTF-8">
     <title>Contact me</title>
-    <link rel="icon" href="photos/sigla.png" type="image/x-icon">
+    <link rel="icon" href="sigla.png" type="image/x-icon">
  </head>
 
  <body>
