--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
     <meta charset="UTF-8">
     <title>The halfmoon cats</title>
-    <link rel="icon" href="sigla.png" type="image/x-icon">
+    <link rel="icon" href="Photos/sigla.png" type="image/x-icon">
  </head>
 
  <body>
@@ -26,7 +26,7 @@
       <li>Handmade Jewelry</li>
    </ul>
    <hr>
-   <img src="p2.png" alt="illustrations">
+   <img src="Photos/p2.png" alt="illustrations">
 
 <!--
    <p>How to make a table</p>
